feat(templates): Add loading GIF while awaiting for search results
* This adds the feature of showing a GIF while server is searching
for usernames availability on different sites.

* The Double Spinner Loading GIF used in this feature is developed
by https://loading.io. We are thankful to there developers.

--- a/templates/base.html
+++ b/templates/base.html
@@ -112,6 +112,17 @@
     <!-- short custom script functions -->
     <script type="text/javascript" charset="utf-8">
 
+        function onloading() {
+            document.getElementById("results").style.display = 'none';
+            document.getElementById("loading").style.display = 'block';
+        }
+
+        function offloading() {
+            document.getElementById("results").style.display = 'block';
+            document.getElementById("loading").style.display = 'none';
+        }
+
+
     </script>
 
 </body>
