feat(templates): Add autoscroll animation to bring search results on top
* This add the ability to scroll automatically after submitting a
username to search. This feature scrolls the screen to bring
loading GIF and eventually search results on the top of the screen.

--- a/templates/base.html
+++ b/templates/base.html
@@ -122,6 +122,17 @@
             document.getElementById("loading").style.display = 'none';
         }
 
+        {% if results %}
+            $(document).ready(function() {
+                $('html, body').scrollTop($("#search_form").offset().top);
+            });
+        {% endif %}
+
+        $("#search_form").submit(function() {
+            $([document.documentElement, document.body]).animate({
+                scrollTop: $("#search_form").offset().top
+            }, 1000);
+        });
 
     </script>
 
