fix(templates): Add wordpress blog icon and vote of thanks in the footer
* This add the social icon link to my wordpress blog.

* This also add the attributions for tools, elements, etc. used to
develop the project.

--- a/templates/base.html
+++ b/templates/base.html
@@ -92,10 +92,26 @@
                             </a>
                         </li>
 
+                        <li>
+                            <a href="https://geekyshacklebolt.wordpress.com">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-wordpress fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
+
                     </ul>
 
                     <p class="copyright text-muted">
                         Powered by <a href="Flask" target="_blank">Flask</a>, that takes great advantage of <a href="https://palletsprojects.com/p/jinja/" target="_blank">Jinja</a> and <a href="http://python.org" target="_blank">Python</a><br>
+                        <br>
+
+                        <hd style="color: black">Thanks a million!</hd><br>
+                        CSS based on <a href="https://github.com/gilsondev/pelican-clean-blog" target="_blank">Pelican Clean Blog</a><br>
+                        Top-Right is a Lovely <a href="http://tholman.com/github-corners/" target="_blank">GitHub Corner</a><br>
+                        Double-Spinners Loading GIF by <a href="https://loading.io" target="_blank">Loading.io</a><br>
+                        <br>
 
                         <hd style="color: black">Terms and Conditions</hd><br>
                         &copy; 2020 Shiva Saxena (<a href="https://github.com/GeekyShacklebolt/nickoscope/blob/master/LICENSE" target="_blank">MIT License</a>)
